k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: simple-bank
  labels:
    name: simple-bank
    app: banking
