k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: simple-bank-service
  namespace: simple-bank
  labels:
    app: simple-bank
spec:
  selector:
    app: simple-bank
  ports:
  - port: 8080
    targetPort: 8080
    nodePort: 30080
    protocol: TCP
  type: NodePort
